--- a/Visualize.ipynb
+++ b/Visualize.ipynb
@@ -52,7 +52,7 @@
     "1. DataStoreHDFS: Nhận dữ liệu từ kafka server và lưu lại vào trong hệ thống hadoop\n",
     "2. Spark: Xử lý real-time dữ liệu bằng notebook, visualize dữ liệu và xây dựng 1 mô hình lstm, predict realtime.\n",
     "Dưới đây là component diagram của hệ thống:\n",
-    "<img src=\"LogStreamingComponents.png\">\n"
+    "<img src=\"Diagrams/LogStreamingComponents.png\">\n"
    ]
   },
   {
