--- a/Visualize.ipynb
+++ b/Visualize.ipynb
@@ -66,11 +66,11 @@
    "source": [
     "### Quá trình gửi xữ liệu từ local lên kafka\n",
     "\n",
-    "<img src=\"log_producer.png\">\n",
+    "<img src=\"images/log_producer.png\">\n",
     "\n",
     "### Quá trình lấy dữ liệu từ kafka lưu vào hdfs\n",
     "\n",
-    "<img src=\"datastore.png\">"
+    "<img src=\"images/datastore.png\">"
    ]
   },
   {
